--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -12,16 +12,14 @@
         <ul class="list-unstyled components">
             <p>Menu</p>
             <li class="active">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+                <a href="" data-toggle="collapse" aria-expanded="false">Home</a>
 
             </li>
             <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Pesquisar</a>
+                <a href="~/Views/HomeLogada/Pesquisar.cshtml" data-toggle="collapse" aria-expanded="false">Pesquisar</a>
             </li>
 
-            <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Avaliar</a>
-            </li>
+           
             <li>
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Suporte</a>
 
@@ -31,9 +29,11 @@
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sair</a>
             </li>
         </ul>
-        <div id="perfil"  style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
-
-        </div>
+        <a href="~/Views/HomeLogada/Perfil.cshtml">
+            <div id="perfil" style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
+                <h5 class="p-2">Perfil</h5>
+            </div>
+        </a>
     </nav>
     <!-- Page Content  -->
     <div id="content" style="background: white">
