--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -189,7 +189,7 @@
                 E não se preocupe se esquecer de alguma, pois será possível editar depois.
 
                 <div class="mt-5" style="height:460px; overflow-y:scroll; ">
-                    @*@foreach (var c in ViewBag.ListaCategorias)
+                    @foreach (var c in ViewBag.ListaCategorias)
                     {
                         <div class="col-12 checkbox-container text-left mt-4 p-0">
                             <label for="@(c.Categoria)">
@@ -198,7 +198,7 @@
                                 @(c.Categoria)
                             </label>
                         </div>
-                    }*@
+                    }
                 </div>
             </div>
 
