--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -5,39 +5,10 @@
 
 <div class="wrapper">
     <!-- Sidebar  -->
-    <nav id="sidebar" onmousemove="moverMenu()" onmouseout="moverMenu2()" >
-        <div class="sidebar-header" style="height: 104px;">
-            <h3>Supplier Ranking</h3>
-        </div>
-        <ul class="list-unstyled components">
-            <p>Menu</p>
-            <li class="active">
-                <a href="" data-toggle="collapse" aria-expanded="false">Home</a>
-
-            </li>
-            <li>
-                <a href="~/Views/HomeLogada/Pesquisar.cshtml" data-toggle="collapse" aria-expanded="false">Pesquisar</a>
-            </li>
-
-           
-            <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Suporte</a>
-
-            </li>
-
-            <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sair</a>
-            </li>
-        </ul>
-        <a href="~/Views/HomeLogada/Perfil.cshtml">
-            <div id="perfil" style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
-                <h5 class="p-2">Perfil</h5>
-            </div>
-        </a>
-    </nav>
+   
     <!-- Page Content  -->
     <div id="content" style="background: white">
-        <section style=" width: 100%;height: 87px;background: #0C496BE6;border: 3px solid #D0A748;">
+        <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -315px;">
 
 
 
@@ -50,7 +21,7 @@
 
 
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1000px;position:absolute;left: 30%;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1000px;position:absolute;left: 19%;top:10px;">
                 <div class="container-fluid">
                     <!-- <button type="button" id="sidebarCollapse" onmouse="menu()"class="btn btn-info">
                     <i class="fas fa-align-left"></i>
