--- a/SupplierRanking/Content/config/css/styleLogada.css
+++ b/SupplierRanking/Content/config/css/styleLogada.css
@@ -59,7 +59,7 @@ a:focus {
 }
 
 #sidebar {
-   height: 1000px;
+   height: 1095px;
    width: 150px;
    background: #0C496BE6;
    color: #fff;
@@ -68,6 +68,7 @@ a:focus {
     z-index: 2;
     position: absolute;
     top: 0px;
+    left: 0px;
 }
 
 
@@ -181,3 +182,15 @@ a.article:hover {
 }
 
  
+
+a.perfil {
+    text-align: center;
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+.mySlides {display:none;}
+.w3-content{
+    max-width: 502px;
+}
