--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -11,7 +11,7 @@
     <!-- Page Content  -->
     <div id="content" style="background: white">
         
-        <section style=" width: 100%;height: 87px;background: #0C496BE6;">
+        <section style=" width: 2000px;height: 104px;background: #0C496BE6;position: absolute;top: 0px;right: -8%;">
 
 
 
@@ -43,11 +43,21 @@
             left: 31%;"></div>
 
         
-        <div style="width: 100%;height: 500px;background-color: white;margin-top: 89px;border: 1px solid black;margin-top: 0px;">
+        <div style="width: 1358px;height: 500px;background-color: white;margin-top: 89px;border: 1px solid black;margin-top: 150px;margin-left: -140px;">
             <section>
-                <div style="width:210px;height:210px;background:white;position: absolute;left: 28%;border: 3px solid black;top:138px;"></div>
+                <div style="width:210px;height:210px;background:white;position: absolute;left: 17%;border: 3px solid black;top:203px;"></div>
 
-                <h1 style="position: absolute;left: 45%;">Nome do Fornecedor</h1>
+                <h1 style="position: absolute;left: 41%;">Nome do Fornecedor</h1>
+
+                <div style="width: 413px;height: 226px;background-color: #fff0;position: absolute;left: 38%;top: 28%;">
+
+                    <h1 style="position: absolute;left: 32%;top: 0px;">Descrição</h1>
+                    <textarea style="position: absolute;left: 22%;top: 48%;width: 260px;height: 97px;">
+
+                    </textarea>
+                </div>
+                
+
 
                 <div style="position: absolute;left: 50%;margin-top: 89px;">
                     <span style=" color: orange;" class="fa fa-star checked"></span>
@@ -78,22 +88,41 @@
            
 
         </div>
-              <div style="width: 100%;height: 500px;background-color: white;margin-top: 89px;margin-top: 2px;">
+              <div style=" width: 1358px; height: 761px; background-color: white; margin-top: 89px; margin-top: 2px; 
+                position: absolute; right: 174px; border: solid 1px;">
 
 
                  <section>
 
-                    <h1 style="position: absolute;left: 48%;">Descrição</h1>
+                   
 
-                    <form  style="position: absolute;left: 50%;margin-top:200px;">
+                    <form  style="position: absolute;left: 50%;margin-top: -12px;">
+                        <h2 style="margin-left:-90px;">Upload de arquivo PDF</h2>
+                        <br />
+                        <br />
                         <input type="file" name="pic" accept="image/*">
                         <input  type="submit">
                     </form>
 
+
+                 
+
+
+
                     
 
                 </section>
+                  <h2 style="margin-top: 194px;margin-left: 128px;" class="w3-center">Galeria de fotos</h2>
 
+                  <div class="w3-content w3-display-container" style="position: absolute;top: 32%;left: 43%;">
+                      <img class="mySlides" src="~/Content/images/about.jpg" style="width:300px">
+                      <img class="mySlides" src="~/Content/images/add-imagem.png" style="width:300px">
+                      <img class="mySlides" src="~/Content/images/about.jpg" style="width:300px">
+                      <img class="mySlides" src="img_forest.jpg" style="width:300px">
+
+                      <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                      <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+                  </div>
 
               </div>  
                                
@@ -117,7 +146,7 @@
                             color: white;
                             border-bottom: 3px solid #bbad00; ">
 
-                        <h4 style="margin-left: 380px;" class="modal-title">Nós ajude a melhorar nosso serviço!</h4>
+                        <h4 style="margin-left: 241px;" class="modal-title">Nós ajude a melhorar nosso serviço!</h4>
                         <button type="button" class="close" data-dismiss="modal" style="color:white;">×</button>
 
                     </div>
@@ -323,5 +352,31 @@
 
     $(':radio').change(function () {
         console.log('New star rating: ' + this.value);
+
     });
+
+
+    
+
+
+
+
 </script>
+<script>
+    var slideIndex = 1;
+    showDivs(slideIndex);
+
+    function plusDivs(n) {
+        showDivs(slideIndex += n);
+    }
+
+    function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        if (n > x.length) { slideIndex = 1 }
+        if (n < 1) { slideIndex = x.length }
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        x[slideIndex - 1].style.display = "block";
+    }</script>
