val - Perfil Fornecedor BACK END, comentarios para mostrar no perfil

--- a/SupplierRanking/Views/Home/Contato.cshtml
+++ b/SupplierRanking/Views/Home/Contato.cshtml
@@ -51,8 +51,8 @@
                 </p>
                 <p>
                    <a class="text-gray"
-                      href="mailto:suportesupplierranking@hotmail.com">
-                        suportesupplierranking@hotmail.com
+                      href="mailto:officialsranking@outlook.com">
+                       officialsranking@outlook.com
                    </a>
                 </p>
             </div>
